test/errors/typecheck/no_such_field.ty
struct Foo {}

Foo:bar := func(n: number) -> number {
	self.baz
}